Animation and the Mouse - 3 (and buffoonery)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   </head>
 
   <body>
+    <h1>Andy's Sad Ball Game</h1>
     <script src="sketch.js"></script>
+    <pre>   Careful: you are not going to be good at this.
+        There is no way to be good at this.
+                    Goodluck!
+    </pre>
 
   </body>
 
